# stolas

./: .gitattributes  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
stolas-app/: Cargo.toml  Dioxus.toml
stolas-app/assets/: main.css
stolas-app/src/: main.rs
stolas-app/src/components/: icon.rs  mod.rs  nav.rs  tooltip.rs
stolas-app/src/views/: capture.rs  dashboard.rs  mod.rs  not_found.rs  settings.rs
stolas-client/: Cargo.toml
stolas-client/src/: lib.rs
stolas-core/: Cargo.toml
stolas-core/src/: api.rs  file.rs  geo.rs  lib.rs
stolas-server/: Cargo.toml
stolas-server/src/: main.rs
stolas-station/: Cargo.toml  config.example.toml
stolas-station/migrations/: 20260502031930_initial.down.sql  20260502031930_initial.up.sql
stolas-station/src/: config.rs  database.rs  main.rs  serve.rs
stolas-station/src/api/: mod.rs
stolas-station/src/sensors/: mod.rs  time.rs
stolas-station/src/server/: mod.rs
stolas-station/src/server/api/: antenna.rs  captures.rs  error.rs  mod.rs  status.rs
stolas-station/src/station/: antenna.rs  captures.rs  gps.rs  mod.rs  recording.rs
stolas-station/src/station/sensors/: mod.rs
stolas-station/src/util/: mod.rs  shutdown.rs  system_stats.rs
stolas-telescope/: Cargo.toml
stolas-telescope/src/: main.rs  network.rs  recording.rs  sample.rs  time.rs
stolas-tools/: Cargo.toml
stolas-tools/src/: main.rs
stolas-webui/: Cargo.toml  index.html
stolas-webui/src/: main.rs
stolas-webui/src/app/: mod.rs  observe.rs  status.rs
stolas-xtask/: Cargo.toml
stolas-xtask/src/: deploy.rs  dev.rs  main.rs  webui.rs
stolas-xtask/src/util/: cargo.rs  git.rs  mod.rs  process.rs  wasm_bindgen.rs  watch.rs
