[package]
name = "stolas-client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.32"
reqwest = { version = "0.13.3", features = ["json"] }
reqwest-websocket = { version = "0.6.0", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
stolas-core.workspace = true
thiserror = "2.0.18"
url = "2.5.8"
