[package]
name = "stolas-server"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
num-complex = "0.4.6"
num-traits = "0.2.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stolas-core = { path = "../stolas-core" }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
