[package]
name = "stolas-station"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
byteorder = "1.5.0"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
color-eyre = "0.6.5"
derive_more = { version = "2.1.1", features = ["debug", "from"] }
directories = "6.0.0"
dotenvy = "0.15.7"
futures-sink = "0.3.32"
futures-util = { version = "0.3.32", features = ["sink"] }
num-complex = "0.4.6"
num-traits = "0.2.19"
parking_lot = "0.12.5"
rtlsdr-async = { version = "0.1.0", git = "https://github.com/jgraef/rtlsdr-async.git", features = [
    "num-complex",
] }
rustfft = "6.4.1"
safe-path = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "migrate",
    "runtime-tokio",
    "sqlite",
] }
stolas-core.workspace = true
systemstat = "0.2.6"
tokio = { version = "1.52.1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
    "process",
] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["codec"] }
toml = "1.1.2"
tower-http = { version = "0.6.8", features = ["fs", "normalize-path", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
