[package]
name = "stolas-webui"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
eyre = "0.6.12"
futures-util = "0.3.32"
gloo-utils = "0.3.0"
leptos = { version = "0.8.19", features = ["nightly", "csr"] }
leptos-use = "0.18.3"
leptos_meta = "0.8.6"
reqwest-websocket = "0.6.0"
tracing = "0.1.44"
tracing-wasm = "0.2.1"
url = "2.5.8"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
web-sys = "0.3.95"
