[package]
name = "stolas-xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
shell-escape = "0.1.5"
tokio = { version = "1.52.1", features = [
    "rt-multi-thread",
    "macros",
    "process",
] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
